# logcpp

./: CMakeLists.txt  README.md
debian/: README  changelog  control  copyright  rules
examples/: CMakeLists.txt  basic.cpp  daemon.cpp  extra_context.cpp
include/: CMakeLists.txt
include/logcpp/: logger.hpp
include/logcpp/formatter/: basicformatter.hpp  formatter.hpp  jsonformatter.hpp  patternformatter.hpp
include/logcpp/helpers/: exception.hpp  objectptr.hpp  utility.hpp
include/logcpp/logger/: consolelogger.hpp  filelogger.hpp  filerotatelogger.hpp  streamlogger.hpp  sysloglogger.hpp
lib/: CMakeLists.txt
src/: basicformatter.cpp  consolelogger.cpp  exception.cpp  filelogger.cpp  filerotatelogger.cpp  formatter.cpp  jsonformatter.cpp  logger.cpp  patternformatter.cpp  streamlogger.cpp  sysloglogger.cpp  utility.cpp  utility.hpp
